--- a/assets/css/animate.css
+++ b/assets/css/animate.css
@@ -23,6 +23,13 @@
     padding: 0.4em;
 }
 
+.inner-me {
+    text-align: right;
+    color: black;
+    overflow: hidden;
+    padding: 0.4em;
+}
+
 .inner > h1 {
     font-size: 3.5em;
     animation: Slide_Up 1.4s ease;
@@ -33,23 +40,72 @@
     animation: Slide_Up 2.1s ease;
 }
 
-.inner > button {
-    margin-top: 2em;
-    padding: 1em 2.5em;
-    font-size: 1em;
-    border-radius: 4em;
-    border: none;
-    background: #f25757;
-    color: whitesmoke;
-    animation: Slide_Up 2.4s ease;
+.inner-me > h1 {
+    font-size: 3.5em;
+    /* animation: Slide_Up 1.4s ease; */
+}
 
+.inner-me > h2 {
+    color: black;
+    animation: Slide_Left 2.1s ease;
+    margin-top: 100px;
+}
+.inner-me > h3 {
+    color: black;
+    margin-top: 100px;
+}
+
+#news .news-title{
+    color: black;
+    font-size: 50px;
+    font-weight: bolder; 
+    text-align: center;
+    /* animation: Slide_Up 4s ease; */
+}
+
+.news-title.fade-in {
+    animation: Slide_Up 4s ease;
+}
+
+/* #news .container table {
+    animation: Slide_Up 5s ease;
+} */
+
+/* #news .container table.fade-in {
+    animation: Slide_Up 5s ease;
+} */
+
+.vision_card{
+    padding: 20px 0px;
+
+}
+
+/* .about_column2 {
+} */
+
+#contact .form-title {
+    color: black;
+    font-size: 50px;
+    font-weight: bolder;
 }
 
 @keyframes Slide_Up {
     0% {
-        transform: translateY(250px);
+        transform: translateY(50px);
     }
     100% {
         transform: translateY(0);
     }
+
 }
+
+@keyframes Slide_Left {
+    0% {
+        transform: translateX(250px);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+
