--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Karla', sans-serif;
 }
 /* navigation */
 body{
@@ -56,6 +57,54 @@ html {
     box-shadow: 4px 2px 3px grey;
 }
 
+.visual_content1 {
+    padding-top: 300px;
+}
+
+.parallax {
+    background: linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,.5)), url(../images/main/rsz_visual_img1.jpg);
+    height: 800px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#home .container {
+    display: flex;
+    justify-content: left;
+}
+
+.inner {
+    text-align: left;
+    color: black;
+    overflow: hidden;
+    padding: 0.4em;
+}
+
+.inner > h1 {
+    font-size: 3.5em;
+    font-weight: bolder;
+}
+
+.inner > p {
+    font-size: 1.2em;
+}
+
+.inner-me > h1 {
+    font-size: 3.5em;
+}
+
+.inner-me > h2 {
+    color: black;
+    animation: Slide_Left 2.1s ease;
+    margin-top: 100px;
+}
+.inner-me > h3 {
+    color: black;
+    margin-top: 100px;
+}
+
 /* main visual */
 /* .parallax {
     background: linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,.5)), url(../images/main/rsz_visual_img1.jpg);
@@ -86,7 +135,7 @@ html {
 #news {
     margin: 0;
     overflow-x: hidden;
-    padding: 30px;
+    padding: 50px 0;
 }
 
 #news td, #news th {
@@ -123,27 +172,46 @@ html {
     font-size: 14px;
 }
 
+#news .news-title{
+    color: black;
+    font-size: 50px;
+    font-weight: bolder; 
+    text-align: center;
+}
+
+.news-title.fade-in {
+    animation: Slide_Up 4s ease;
+}
+
+
 /* vision  */
 .vision{
     padding: 50px 0px;
-    font-family: 'Karla', sans-serif;
+    /* font-family: 'Karla', sans-serif; */
 }
 .vision_heading{
     font-size: 50px;
     font-weight: bold;
+    padding-bottom: 20px;
 }
 .vision_column3 img{
     width: 50px;
 }
 
+.vision_card{
+    padding: 20px 0px;
+
+}
+
 /* about */
 .about{
     padding: 50px 0px;
-    font-family: 'Karla', sans-serif;
+    /* font-family: 'Karla', sans-serif; */
 }
 .about_heading{
     font-size: 50px;
     font-weight: bold;
+    padding-bottom: 20px;
 }
 .about_card{
     padding: 20px 0px;
@@ -151,11 +219,12 @@ html {
 /* works  */
 .works{
     padding: 50px 0px;
-    font-family: 'Karla', sans-serif;
+    /* font-family: 'Karla', sans-serif; */
 }
 .works_heading{
     font-size: 50px;
     font-weight: bold;
+    padding-bottom: 20px;
 }
 .works_column3 img{
     width: 50px;
@@ -166,7 +235,7 @@ html {
 
 /* Works Grid (NAYTHAN) */
 .grid{
-    display: flex;
+   display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: space-around;
@@ -174,7 +243,7 @@ html {
    align-content: stretch;
 
    background-color: yellow;
-    background-repeat: no-repeat; 
+   background-repeat: no-repeat; 
    background-size: cover; 
    background-image: url("../images/grid/7-01.png");
    background-repeat: no-repeat;
@@ -212,15 +281,17 @@ html {
 }
 
 .content h2{
-   font-size: 28px;
+   font-size: 20px;
    font-weight: bold;
    line-height: 2;
-   font-family: 'Karla', sans-serif;
+   padding-bottom: 10px;
+   padding-top: 10px;
+   /* font-family: 'Karla', sans-serif; */
 }
 
 .content h3{
    font-size: 20px;
-   font-family: 'Karla', sans-serif;
+   /* font-family: 'Karla', sans-serif; */
 }
 
 .grid .cont .content img {
@@ -282,12 +353,19 @@ html {
     align-content: right;
 }
 
+#contact .form-title {
+    color: black;
+    font-size: 50px;
+    font-weight: bolder;
+}
+
+
 /* Footer (BEV) */
 footer {
     background-color: #00AEEF;
     padding: 10px;
     text-align: center;
-    font-family: 'Karla', sans-serif;
+    /* font-family: 'Karla', sans-serif; */
 }
 
 footer .footer-copyright {
