--- a/assets/css/june_responsive.css
+++ b/assets/css/june_responsive.css
@@ -30,8 +30,9 @@
         font-weight: bold;
         text-align: center;
     }
-    .about_card p{
-        text-align: justify;
+    .about_card{
+        padding: 20px 0px;
+        text-align: center;
     }
     .about_column2{
         display: none;
@@ -85,7 +86,7 @@
         text-align: center;
     }
     .about_card p{
-        text-align: justify;
+        text-align: center;
     }
     .about_img1_column{
         width: 80%;
