--- a/assets/css/naythan_responsive.css
+++ b/assets/css/naythan_responsive.css
@@ -1,3 +1,4 @@
+/* Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) { 
     .grid{
         display: flex;
@@ -14,10 +15,11 @@
        background-repeat: no-repeat;
        background-size: 1920px auto;
        width: auto;
-       height: 2000px;
+       height: auto;
+       padding: 50px;
     }
-    
-    .cont{
+
+    /* .cont{
         display: flex;
         flex-direction: column;
         flex-wrap: nowrap;
@@ -25,20 +27,46 @@
         align-items: center;
         align-content: center;
      
-        /* background-color: grey; */
-        /* background-image: url("../images/works/6.png"); */
         background-repeat: no-repeat;
         background-size: 600px 550px;
         width: 100%;
         height: 500px;
         border-radius: 50px;
         margin: 50px;
+        background-color: teal;
+
+     } */
+
+     .cont{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        justify-content: flex-start;
+        align-items: center;
+        align-content: center;
+     
+        width: auto;
+        height: auto;
+        margin: 0px;
+        background-color: teal;
+
      }
+
+     .grid .cont .content img {
+        width: 100%;  
+        border-top-left-radius: 50px;
+        border-top-right-radius: 50px;
+       }
 
      /* .grid .cont .content img {
         width: 100%;
         border-top-left-radius: 50px;
         border-top-right-radius: 50px;
+        background-color: aqua;
+       } */
+
+       /* #works .cont .content img {
+            width: 10px;
        } */
 
     
