--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -76,7 +76,6 @@ html {
 }
 
 .inner {
-    text-align: left;
     color: black;
     overflow: hidden;
     padding: 0.4em;
@@ -91,19 +90,6 @@ html {
     font-size: 1.2em;
 }
 
-.inner-me > h1 {
-    font-size: 3.5em;
-}
-
-.inner-me > h2 {
-    color: black;
-    animation: Slide_Left 2.1s ease;
-    margin-top: 100px;
-}
-.inner-me > h3 {
-    color: black;
-    margin-top: 100px;
-}
 
 /* main visual */
 /* .parallax {
@@ -207,6 +193,7 @@ html {
 .about{
     padding: 50px 0px;
     /* font-family: 'Karla', sans-serif; */
+
 }
 .about_heading{
     font-size: 50px;
@@ -215,6 +202,8 @@ html {
 }
 .about_card{
     padding: 20px 0px;
+    text-align: right;
+    margin-top: 20px;
 }
 /* works  */
 .works{
@@ -234,7 +223,65 @@ html {
 }
 
 /* Works Grid (NAYTHAN) */
-.grid{
+
+#works {
+    /* background-image: url(./assets/images/grid/7-01.png);
+    background-repeat: no-repeat; 
+    align-content: stretch;
+
+    background-repeat: no-repeat; 
+    background-size: cover; 
+    background-image: url("../images/grid/7-01.png");
+    background-repeat: no-repeat;
+    background-size: 1920px auto;
+    width: 100%;
+    height: auto;
+
+    background-color: yellow;
+    padding-top: 50px;
+    padding-bottom: 50px; */
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: flex-end;
+    align-content: stretch;
+ 
+    background-color: yellow;
+    background-repeat: no-repeat; 
+    background-size: cover; 
+    background-image: url("../images/grid/7-01.png");
+    background-repeat: no-repeat;
+    background-size: 1920px auto;
+    width: 100%;
+    height: auto;
+}
+
+#works img {
+    width: 100%;
+    height: auto;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
+}
+
+#works h2 {
+    font-size: 20px;
+    margin-top: 20px;
+    font-weight: bold;
+}
+
+#works p {
+    margin-top: 20px;
+}
+
+#works .col-md {
+    margin: 20px;
+    text-align: center;
+    padding: 20px;
+}
+
+/* .grid{
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
@@ -260,7 +307,6 @@ html {
     align-items: center;
     align-content: space-around;
 
-
    background-image: url("../images/grid/6.png");
    background-repeat: no-repeat;
    background-size: 100%;
@@ -269,8 +315,8 @@ html {
    max-width: 600px;
    height: auto;
    border-radius: 50px;
-   margin: 100px;
-   padding: 70px 0px 0px 0px;
+   margin: 70px;
+   padding: 50px 0px 0px 0px;
 }
 
 .content{
@@ -286,26 +332,24 @@ html {
    line-height: 2;
    padding-bottom: 10px;
    padding-top: 10px;
-   /* font-family: 'Karla', sans-serif; */
 }
 
 .content h3{
    font-size: 20px;
-   /* font-family: 'Karla', sans-serif; */
 }
 
 .grid .cont .content img {
  width: 100%;  
  border-top-left-radius: 50px;
  border-top-right-radius: 50px;
-}
+} */
 
 
 /* contact */
 #contact {
     margin: 0;
     overflow-x: hidden;
-    padding-top: 30px;
+    padding-top: 50px;
     padding-bottom: 30px;
 }
 
