--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -263,6 +263,7 @@ html {
     height: auto;
     border-top-left-radius: 40px;
     border-top-right-radius: 40px;
+    background-repeat: no-repeat;
 }
 
 #works h2 {
