--- a/assets/css/bev_responsive.css
+++ b/assets/css/bev_responsive.css
@@ -40,7 +40,7 @@
     #contact {
         margin-bottom: 0px;
         padding-bottom: 0px;
-        padding-top: 20px;
+        /* padding-top: 10px; */
         padding-bottom: 20px;
     }
 
