--- a/assets/css/kevin_responsive.css
+++ b/assets/css/kevin_responsive.css
@@ -29,10 +29,12 @@
     .inner > h1 {
         font-size: 2.5em;
         font-weight: bolder;
+        text-align: justify;
+        text-align-last: center;
     }
     
     .inner > p {
-        font-size: 2em;
+        font-size: 1.6em;
     }
 }
 
