--- a/assets/css/kevin_responsive.css
+++ b/assets/css/kevin_responsive.css
@@ -6,9 +6,15 @@
     }
 
     /* main visual */
-    .parallax{
-        height: 100vh;
-    } 
+    .parallax {
+        background: linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,.5)), url(../images/main/rsz_visual_img1.jpg);
+        height: 426px;
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    
 
     .visual_content1{
         padding-top: 200px;
@@ -24,17 +30,20 @@
         color: black;
         overflow: hidden;
         padding: 0.4em;
+        margin: auto;
+        width: 100%;
     }
     
     .inner > h1 {
-        font-size: 2.5em;
+        font-size: 3.3em;
         font-weight: bolder;
-        text-align: justify;
-        text-align-last: center;
+        text-align: center;
+
     }
     
     .inner > p {
         font-size: 1.6em;
+        text-align: center;
     }
 }
 
@@ -67,6 +76,25 @@
     .visual_content4 span{
         font-size: 15px;
     }
+
+    .inner {
+        color: black;
+        overflow: hidden;
+        padding: 0.4em;
+        margin: auto;
+        width: 100%;
+    }
+
+    .inner > h1 {
+        font-size: 4.3em;
+        font-weight: bolder;
+        text-align: justify;
+        text-align-last: center;
+    }
+
+    .inner > p {
+        font-size: 2.2em;
+    }
     /* .parallax{
         height: 60vh;
     } */
@@ -89,6 +117,25 @@
     }
     .parallax{
         height: 60vh;
+    }
+
+    .inner {
+        color: black;
+        overflow: hidden;
+        padding: 0.4em;
+        margin: auto;
+        width: 100%;
+    }
+
+    .inner > h1 {
+        font-size: 4.3em;
+        font-weight: bolder;
+        text-align: justify;
+        text-align-last: center;
+    }
+
+    .inner > p {
+        font-size: 2.2em;
     }
 }
 
