--- a/assets/css/kevin_responsive.css
+++ b/assets/css/kevin_responsive.css
@@ -9,7 +9,7 @@
     .parallax {
         background: linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,.5)), url("../images/main/rsz_visual_img1.jpg");
         height: 70vh;
-        background-attachment: fixed;
+        background-attachment:scroll; 
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
