Added more CSS on parallax class

--- a/assets/css/kevin_responsive.css
+++ b/assets/css/kevin_responsive.css
@@ -13,6 +13,9 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
+        -o-background-size:cover; 
+        -moz-background-size:cover; 
+        -webkit-background-size:cover; 
     }
     
 
