IOS issues fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -706,7 +706,7 @@ footer h6 a:hover{
      .parallax {
         background: linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,.5)), url("../images/main/rsz_visual_img1.jpg");
         height: 200vh;
-        background-attachment: fixed; 
+        background-attachment: scroll; 
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -787,7 +787,7 @@ footer h6 a:hover{
     .parallax {
         background: linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,.5)), url("../images/main/rsz_visual_img1.jpg");
         height: 200vh;
-        background-attachment: fixed; 
+        background-attachment: scroll; 
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
